# intel_jpeg_decoder_plugin

./: .gitignore  CMakeLists.txt  intel_jpeg_decoder_plugin.cpp  test_ext.cpp  vpl_header.hpp
